--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <title>MPESA Junior APP :
       Save your money </title>
-
+<link rel="stylesheet" href="index.css"/>
 </head>
 
 <body>
