--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>MPESA Junior APP :
       Save your money </title>
 <link rel="stylesheet" href="index.css"/>
+<script src=index.js></script>
 </head>
 
 <body>
